# blackcat

./: README.md  components.d.ts  dev-app-update.yml  electron-builder.yml  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  components.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  file.rs  info.rs  main.rs  process.rs  script.rs
src/components/: Header.vue
src/components/file/: FileIndex.vue
src/components/headers/: AboutIndex.vue  ProcessIndex.vue
src/components/home/: HomeIndex.vue
src/components/script/: ScriptBlock.vue  ScriptIndex.vue  ScriptsContainer.vue
src/components/terminal/: TerminalIndex.vue
src/components/utility/: UtilityIndex.vue
